# experiment-launcher

./: .gitignore  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  jupyterhub_config.py.example  requirements_dev.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-app.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
ewatercycle_experiment_launcher/: __init__.py  app.py  auth.py  cli.py  generate.py  hub.py  openapi.yaml  process.py  serve.py  swagger.yaml
ewatercycle_experiment_launcher/api/: assesment.py  assessment.py  bmi.py  hello.py  opendap.py  pyewatercycle.py  threeclickscience.py
tests/: conftest.py  test_auth.py  test_ewatercycle_experiment_launcher.py  test_hub.py  test_process.py
tests/api/: test_assessment.py  test_bmi.py  test_hello.py  test_opendap.py  test_pyewatercycle.py  test_threeclickscience.py
