[bumpversion]
current_version = 0.2.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:ewatercycle_experiment_launcher/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:ewatercycle_experiment_launcher/openapi.yaml]
search = version: {current_version}
replace = version: {new_version}

[bumpversion:file:CITATION.cff]
search = version: "{current_version}"
replace = version: "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
addopts =  --cov=ewatercycle_experiment_launcher --cov-report xml --cov-report term --cov-branch --junit-xml xunit-reports/xunit-result-experiment-launcher.xml

[metadata]
license_file = LICENSE
